# data_visualization

./: .gitignore  Cargo.toml  README.md
assets/: bunny.vtk  sphere.vtk  sphere_order1.vtu  sphere_order2.vtk  sphere_order2.vtu  sphere_solution.vtu  torus.vtu  tri_attrib.vtk
assets/shaders/: timeseries.wgsl  wave.wgsl
src/: animation.rs  camera.rs  environment.rs  lod.rs  main.rs  mesh.rs  model_transform.rs  render.rs  tet.vtk  ui.rs  ui_system.rs
src/mesh/: color_maps.rs  error.rs  higher_order.rs  subdivision.rs  triangulation.rs  vtk.rs  wave.rs  wave_procedural.rs
src/render/: timeseries_material.rs  wave_material.rs
src/ui/: color_bar.rs  events.rs
