[package]
name = "data_visualization"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_egui = "0.31.1"
rfd = "0.15.0"
bevy_obj = "0.15.0"
vtkio = "0.7.0-rc1"
bevy_atmosphere = "0.12.2"
procedural_modelling = "0.3.0"


[profile.dev]
opt-level = 0
debug = "full"

[profile.dev.package."*"]
opt-level = 0
